# scfs

./: .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  COMPLETION.md  COMPLETION_STATUS.txt  CRASH_CONSISTENCY.md  Cargo.toml  DOCS_AUDIT.md  FINAL_COMPLETION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SESSION_REPORT.md  HMM_CLASSIFIER.md  IMPLEMENTATION_SUMMARY_OLD.md  LAZY_MIGRATION.md  OPERATIONS_GUIDE.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_QUICK_REFERENCE.md  PERF_COMPARISON.md  PHASE_10_COMPLETE.md  PHASE_11_FUSE_OPTIMIZATION_COMPLETE.md  PHASE_12_COMPLETE.md  PHASE_13_COMPLETE.md  PHASE_14_COMPLETE.md  PHASE_15_COMPLETE.md  PHASE_16_COMPLETE.md  PHASE_16_FINAL_REPORT.md  PHASE_16_SUMMARY.md  PHASE_17_COMPLETE.md  PHASE_18_3_ALLOCATOR_DESIGN.md  PHASE_18_RAW_BLOCK_DEVICE.md  PHASE_1_1_COMPLETE.md  PHASE_1_2_COMPLETE.md  PHASE_1_3_COMPLETE.md  PHASE_9_1_COMPLETE.md  PHASE_9_2_9_3_COMPLETE.md  PHASE_9_REPORT.md  POWER_LOSS_SIMULATION.md  PRODUCTION_ROADMAP.md  PROJECT.md  QUICKSTART.md  (+14 more)
benches/: benchmarks.rs  fs_comparison.rs
src/: adaptive.rs  allocator.rs  backup_evolution.rs  cli.rs  concurrency.rs  config.rs  crash_sim.rs  crash_tests.rs  data_cache.rs  defrag.rs  device_io.rs  diagnostics.rs  disk.rs  disk_tests.rs  distributed.rs  extent.rs  file_locks.rs  free_extent.rs  fs_interface.rs  fuse_impl.rs  fuse_optimizations.rs  gc.rs  hmm_classifier.rs  integration_drain_rebuild.rs  io_alignment.rs  io_alignment_tests.rs  io_scheduler.rs  json_output.rs  lib.rs  logging.rs  loopback_integration_tests.rs  macos.rs  main.rs  metadata.rs  metadata_tx.rs  (+32 more)
(+43 files in other folders)
