[package]
name = "dynamicfs"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.15"
libc = "0.2"
nix = { version = "0.27", features = ["fs"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
reed-solomon-erasure = "6.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
